cmake_minimum_required(VERSION 3.10)
project(Release)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)
include_directories(include/Lua)
include_directories(include/ReiLib)
include_directories(include/SFML)
include_directories(include/SFML/Audio)
include_directories(include/SFML/Graphics)
include_directories(include/SFML/Network)
include_directories(include/SFML/System)
include_directories(include/SFML/Window)
include_directories(src)

add_executable(Release
        include/Lua/lapi.c
        include/Lua/lapi.h
        include/Lua/lauxlib.c
        include/Lua/lauxlib.h
        include/Lua/lbaselib.c
        include/Lua/lbitlib.c
        include/Lua/lcode.c
        include/Lua/lcode.h
        include/Lua/lcorolib.c
        include/Lua/lctype.c
        include/Lua/lctype.h
        include/Lua/ldblib.c
        include/Lua/ldebug.c
        include/Lua/ldebug.h
        include/Lua/ldo.c
        include/Lua/ldo.h
        include/Lua/ldump.c
        include/Lua/lfunc.c
        include/Lua/lfunc.h
        include/Lua/lgc.c
        include/Lua/lgc.h
        include/Lua/linit.c
        include/Lua/liolib.c
        include/Lua/llex.c
        include/Lua/llex.h
        include/Lua/llimits.h
        include/Lua/lmathlib.c
        include/Lua/lmem.c
        include/Lua/lmem.h
        include/Lua/loadlib.c
        include/Lua/lobject.c
        include/Lua/lobject.h
        include/Lua/lopcodes.c
        include/Lua/lopcodes.h
        include/Lua/loslib.c
        include/Lua/lparser.c
        include/Lua/lparser.h
        include/Lua/lprefix.h
        include/Lua/lstate.c
        include/Lua/lstate.h
        include/Lua/lstring.c
        include/Lua/lstring.h
        include/Lua/lstrlib.c
        include/Lua/ltable.c
        include/Lua/ltable.h
        include/Lua/ltablib.c
        include/Lua/ltm.c
        include/Lua/ltm.h
        include/Lua/lua.c
        include/Lua/lua.h
        include/Lua/lua.hpp
        include/Lua/luaconf.h
        include/Lua/lualib.h
        include/Lua/lundump.c
        include/Lua/lundump.h
        include/Lua/lutf8lib.c
        include/Lua/lvm.c
        include/Lua/lvm.h
        include/Lua/lzio.c
        include/Lua/lzio.h
        include/Lua/sol.hpp
        include/ReiLib/pmap.h
        include/SFML/Audio/AlResource.hpp
        include/SFML/Audio/Export.hpp
        include/SFML/Audio/InputSoundFile.hpp
        include/SFML/Audio/Listener.hpp
        include/SFML/Audio/Music.hpp
        include/SFML/Audio/OutputSoundFile.hpp
        include/SFML/Audio/Sound.hpp
        include/SFML/Audio/SoundBuffer.hpp
        include/SFML/Audio/SoundBufferRecorder.hpp
        include/SFML/Audio/SoundFileFactory.hpp
        include/SFML/Audio/SoundFileFactory.inl
        include/SFML/Audio/SoundFileReader.hpp
        include/SFML/Audio/SoundFileWriter.hpp
        include/SFML/Audio/SoundRecorder.hpp
        include/SFML/Audio/SoundSource.hpp
        include/SFML/Audio/SoundStream.hpp
        include/SFML/Graphics/BlendMode.hpp
        include/SFML/Graphics/CircleShape.hpp
        include/SFML/Graphics/Color.hpp
        include/SFML/Graphics/ConvexShape.hpp
        include/SFML/Graphics/Drawable.hpp
        include/SFML/Graphics/Export.hpp
        include/SFML/Graphics/Font.hpp
        include/SFML/Graphics/Glsl.hpp
        include/SFML/Graphics/Glsl.inl
        include/SFML/Graphics/Glyph.hpp
        include/SFML/Graphics/Image.hpp
        include/SFML/Graphics/PrimitiveType.hpp
        include/SFML/Graphics/Rect.hpp
        include/SFML/Graphics/Rect.inl
        include/SFML/Graphics/RectangleShape.hpp
        include/SFML/Graphics/RenderStates.hpp
        include/SFML/Graphics/RenderTarget.hpp
        include/SFML/Graphics/RenderTexture.hpp
        include/SFML/Graphics/RenderWindow.hpp
        include/SFML/Graphics/Shader.hpp
        include/SFML/Graphics/Shape.hpp
        include/SFML/Graphics/Sprite.hpp
        include/SFML/Graphics/Text.hpp
        include/SFML/Graphics/Texture.hpp
        include/SFML/Graphics/Transform.hpp
        include/SFML/Graphics/Transformable.hpp
        include/SFML/Graphics/Vertex.hpp
        include/SFML/Graphics/VertexArray.hpp
        include/SFML/Graphics/View.hpp
        include/SFML/Network/Export.hpp
        include/SFML/Network/Ftp.hpp
        include/SFML/Network/Http.hpp
        include/SFML/Network/IpAddress.hpp
        include/SFML/Network/Packet.hpp
        include/SFML/Network/Socket.hpp
        include/SFML/Network/SocketHandle.hpp
        include/SFML/Network/SocketSelector.hpp
        include/SFML/Network/TcpListener.hpp
        include/SFML/Network/TcpSocket.hpp
        include/SFML/Network/UdpSocket.hpp
        include/SFML/System/Clock.hpp
        include/SFML/System/Err.hpp
        include/SFML/System/Export.hpp
        include/SFML/System/FileInputStream.hpp
        include/SFML/System/InputStream.hpp
        include/SFML/System/Lock.hpp
        include/SFML/System/MemoryInputStream.hpp
        include/SFML/System/Mutex.hpp
        include/SFML/System/NativeActivity.hpp
        include/SFML/System/NonCopyable.hpp
        include/SFML/System/Sleep.hpp
        include/SFML/System/String.hpp
        include/SFML/System/String.inl
        include/SFML/System/Thread.hpp
        include/SFML/System/Thread.inl
        include/SFML/System/ThreadLocal.hpp
        include/SFML/System/ThreadLocalPtr.hpp
        include/SFML/System/ThreadLocalPtr.inl
        include/SFML/System/Time.hpp
        include/SFML/System/Utf.hpp
        include/SFML/System/Utf.inl
        include/SFML/System/Vector2.hpp
        include/SFML/System/Vector2.inl
        include/SFML/System/Vector3.hpp
        include/SFML/System/Vector3.inl
        include/SFML/Window/Context.hpp
        include/SFML/Window/ContextSettings.hpp
        include/SFML/Window/Event.hpp
        include/SFML/Window/Export.hpp
        include/SFML/Window/GlResource.hpp
        include/SFML/Window/Joystick.hpp
        include/SFML/Window/Keyboard.hpp
        include/SFML/Window/Mouse.hpp
        include/SFML/Window/Sensor.hpp
        include/SFML/Window/Touch.hpp
        include/SFML/Window/VideoMode.hpp
        include/SFML/Window/Window.hpp
        include/SFML/Window/WindowHandle.hpp
        include/SFML/Window/WindowStyle.hpp
        include/SFML/Audio.hpp
        include/SFML/Config.hpp
        include/SFML/Graphics.hpp
        include/SFML/Main.hpp
        include/SFML/Network.hpp
        include/SFML/OpenGL.hpp
        include/SFML/System.hpp
        include/SFML/Window.hpp
        src/AnimSystem.cpp
        src/AnimSystem.h
        src/AssetManager.cpp
        src/AssetManager.h
        src/AudioSystem.cpp
        src/AudioSystem.h
        src/CollisionSystem.cpp
        src/CollisionSystem.h
        src/CompManager.cpp
        src/CompManager.h
        src/Components.h
        src/Engine.cpp
        src/Engine.h
        src/Entity.h
        src/EntityManager.cpp
        src/EntityManager.h
        src/InputModules.h
        src/InputSystem.cpp
        src/InputSystem.h
        src/main.cpp
        src/PhysicsSystem.cpp
        src/PhysicsSystem.h
        src/RenderSystem.cpp
        src/RenderSystem.h
        src/Scene.cpp
        src/Scene.h
        src/SceneMachine.cpp
        src/SceneMachine.h
        src/ScriptSystem.cpp
        src/ScriptSystem.h
        src/System.h
        src/Utility.h)
